--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "migraine.phar",
-    "sha1": "SHA1(migraine.phar)= fe2237352a1a149b6ece6a2d7ed3a0e426797947",
+    "sha1": "eec703f46e9919287ada67c6fb584ee718ee0f00",
     "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.1.phar",
     "version": "0.0.1"
 }
