--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jiabin/migraine",
-    "description": "Yet another tool for migrations",
+    "description": "Yet another tool for managing migrations.",
     "license": "MIT",
     "require": {
         "symfony/console": "~2.3",
