--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,44 @@
 {
-    "name": "jiabin/migraine",
-    "description": "Yet another tool for managing migrations.",
-    "license": "MIT",
+    "name":        "jiabin/migraine",
+    "type":        "project",
+    "description": "Damn simple migrations for PHP",
+    "keywords":    ["migration"],
+    "homepage":    "https://github.com/jiabin/migraine",
+    "license":     "MIT",
+    "authors": [
+        {
+            "name": "Eymen Gunay",
+            "email": "eymen@egunay.com"
+        }
+    ],
     "require": {
+        "php": ">=5.3.0",
+
         "symfony/console": "~2.3",
+        "symfony/config": "~2.3",
+        "symfony/finder": "~2.3",
+        "symfony/yaml": "~2.3",
         "symfony/options-resolver": "~2.3",
-        "herrera-io/phar-update": "~1.0"
+        "monolog/monolog": "~1.7",
+        "doctrine/collections": "~1.0",
+        "predis/predis": "~0.8",
+        "herrera-io/phar-update": "~2.0"
     },
-    "autoload": {
-        "psr-0": {
-            "Migraine": "src"
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
+    "suggest": {
+        "ext-mongo": "*"
+    },
+    "autoload":     {
+        "psr-0": { 
+            "Migraine\\": "src/"
+        }
+    },
+    "bin": ["bin/migraine"],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
         }
     }
 }
