--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,37 @@
     {
         "name": "migraine.phar",
         "sha1": "eec703f46e9919287ada67c6fb584ee718ee0f00",
-        "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.1.phar",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.0.1.phar",
         "version": "0.0.1"
     },
     {
         "name": "migraine.phar",
         "sha1": "1baac8ffd36fd52ec8ab9f1fb9bf038ff96e63e6",
-        "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.2.phar",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.0.2.phar",
         "version": "0.0.2"
     },
     {
         "name": "migraine.phar",
         "sha1": "f74a446cca9e6cdb1e1f24f5398f9ae29837ada8",
-        "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.3.phar",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.0.3.phar",
         "version": "0.0.3"
     },
     {
         "name": "migraine.phar",
         "sha1": "84db8dc6efe609f45fe9e5b64f3cafdce6156fd1",
-        "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.3.phar",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.0.3.phar",
         "version": "0.0.3"
     },
     {
         "name": "migraine.phar",
         "sha1": "3702148f5fe4b2e5be6dd02aee8379aa8b1dd004",
-        "url": "http://jiabin.github.io/migraine/downloads/migraine-0.0.4.phar",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.0.4.phar",
         "version": "0.0.4"
+    },
+    {
+        "name": "migraine.phar",
+        "sha1": "05cbb6b39048307fd6b034ec27d8f2895559794d",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.0.phar",
+        "version": "0.1.0"
     }
 ]
