--- a/manifest.json
+++ b/manifest.json
@@ -34,5 +34,11 @@
         "sha1": "a122e082fdfc6670b5920196cf9a9c6e3dc5b0b6",
         "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.0.phar",
         "version": "0.1.0"
+    },
+    {
+        "name": "migraine.phar",
+        "sha1": "b843b76e1dd7258dc48a35ef84921a28d3c6a7a4",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.1.phar",
+        "version": "0.1.1"
     }
 ]
