--- a/manifest.json
+++ b/manifest.json
@@ -34,5 +34,11 @@
         "sha1": "a122e082fdfc6670b5920196cf9a9c6e3dc5b0b6",
         "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.0.phar",
         "version": "0.1.0"
+    },
+    {
+        "name": "migraine.phar",
+        "sha1": "ef90e88c27a9de5323cdc0e774fcb318c1a23bcb",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.1.phar",
+        "version": "0.1.1"
     }
 ]
