--- a/manifest.json
+++ b/manifest.json
@@ -46,5 +46,11 @@
         "sha1": "ae50ded1643d5a0f346f1031a8836856acc1df8b",
         "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-0.1.2.phar",
         "version": "0.1.2"
+    },
+    {
+        "name": "migraine.phar",
+        "sha1": "beb7dc09d79e266bc578059c13f3f6ecac6a0337",
+        "url": "http:\/\/jiabin.github.io\/migraine\/downloads\/migraine-1.0.0.phar",
+        "version": "1.0.0"
     }
 ]
